--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ikuchko.world_population.MainActivity" />
         </activity>
-        <activity android:name=".HumanAgeActivity"></activity>
+        <activity android:name=".HumanAgeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ikuchko.world_population.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
