--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     apt 'org.parceler:parceler:1.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,4 +36,10 @@ dependencies {
     compile 'oauth.signpost:signpost-core:1.2.1.2'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.firebaseui:firebase-ui:0.3.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.firebase:firebase-client-android:2.3.1'
+
 }
