--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,13 +34,11 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
-    compile 'oauth.signpost:signpost-core:1.2.1.2'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.firebaseui:firebase-ui:0.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
-    compile 'org.twitter4j:twitter4j-core:4.0.2'
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
 }
