--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.firebaseui:firebase-ui:0.3.1'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.firebase:firebase-client-android:2.3.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
 }
